charts/test/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  test-api-service
spec:
  selector:
    app:  test-api
  ports:
    - port: 80
      protocol: TCP
